<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="@dimen/_4sdp"
    app:cardCornerRadius="@dimen/_11sdp"
    app:cardElevation="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/imageCard"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:elevation="@dimen/_4sdp"
            app:cardCornerRadius="@dimen/_11sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/news_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/news_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:ellipsize="end"
            android:fontFamily="@font/ubuntu_bold"
            android:maxLines="2"
            android:text="@string/news_title"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageCard"
            app:layout_constraintTop_toTopOf="@+id/imageCard" />

        <TextView
            android:id="@+id/news_desc"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:ellipsize="end"
            android:fontFamily="@font/ubuntu_medium"
            android:maxLines="2"
            android:text="@string/loren_ipsum"
            android:textColor="@color/grey"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toTopOf="@id/news_source"
            app:layout_constraintEnd_toEndOf="@+id/news_title"
            app:layout_constraintStart_toStartOf="@+id/news_title"
            app:layout_constraintTop_toBottomOf="@+id/news_title" />

        <TextView
            android:id="@+id/news_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/source"
            android:textColor="@color/grey"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintBottom_toBottomOf="@+id/imageCard"
            app:layout_constraintStart_toStartOf="@+id/news_desc" />

        <TextView
            android:id="@+id/news_published"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/published_at"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintBottom_toBottomOf="@+id/news_source"
            app:layout_constraintEnd_toEndOf="@+id/news_desc" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>